--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -92,14 +92,14 @@ application/trademarks=""
 
 [preset.3]
 
-name="Windows Desktop 2"
-platform="Windows Desktop"
+name="HTML5 Mobile"
+platform="HTML5"
 runnable=false
 custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../website/files/releases/GoldMinerBeta_2.exe"
+export_path="docs/play/mobile/index.html"
 script_export_mode=1
 script_encryption_key=""
 
@@ -107,27 +107,10 @@ script_encryption_key=""
 
 custom_template/debug=""
 custom_template/release=""
-binary_format/64_bits=true
-binary_format/embed_pck=true
-texture_format/bptc=false
-texture_format/s3tc=true
-texture_format/etc=false
-texture_format/etc2=false
-texture_format/no_bptc_fallbacks=true
-codesign/enable=false
-codesign/identity_type=0
-codesign/identity=""
-codesign/password=""
-codesign/timestamp=true
-codesign/timestamp_server_url=""
-codesign/digest_algorithm=1
-codesign/description=""
-codesign/custom_options=PoolStringArray(  )
-application/icon=""
-application/file_version=""
-application/product_version=""
-application/company_name="EggsnHam Studios"
-application/product_name="Gold Miner Beta"
-application/file_description=""
-application/copyright=""
-application/trademarks=""
+variant/export_type=0
+vram_texture_compression/for_desktop=true
+vram_texture_compression/for_mobile=true
+html/custom_html_shell=""
+html/head_include=""
+html/canvas_resize_policy=2
+html/experimental_virtual_keyboard=false
